--- a/index.html
+++ b/index.html
@@ -19,109 +19,120 @@
             </div>
         </div>
         <div class="row">
-            <div id="leftPanel1" class="col-lg-6">
-                <div class="headerPanel">
-                    <h3>Customers</h3>
-                    <input type="text" class="form-check-input">
-                    <input type="text" class="form-check-input">
-                    <div class="classTable">
-                        <table class="tableProducts">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div id="rightPanel1" class="col-lg-6">
-                <div class="headerPanel">
-                    <h3>Products</h3>
-                    <input type="text" class="form-check-input">
-                    <input type="text" class="form-check-input">
-                    <div class="classTable">
-                        <table class="tableCustomers">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div id="leftPanel2" class="col-lg-6">
-                <div class="headerPanel">
-                    <h3>Register Customer</h3>
-                    <h5 class="regCustomerText">Customer ID:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Company Name:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Contact Name:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Contact Title:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Adress:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Region:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">City:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Posta Code:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Country:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Phone:</h5> <input type="text" class="form-check-input2">
-                    <h5 class="regCustomerText">Fax:</h5> <input type="text" class="form-check-input2">
-                    <div class="col-lg-16 text-center"> 
-                    <br><button id="buttonRegisterC" class="btn btn-primary center-block">Register</button>
-                </div>
-                </div>
-            </div>
-            <div id="rightPanel2" class="col-lg-6">
-                <div class="headerPanel">
-                    <h3>Register Order</h3>
+        <div id="leftPanel0" class="col-lg-6">
+            <h3>Customers</h3>
+            <input type="text" class="form-check-input">
+        </div>
+        <div id="rightPanel0" class="col-lg-6">
+            <h3>Products</h3>
+            <input type="text" class="form-check-input">
+        </div>
+    </div>
+    <div class="row">
+        <div id="leftPanel1" class="col-lg-6">
+            <div class="headerPanel">
+
+                <div class="classTable">
+                    <table class="tableProducts">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
+        <div id="rightPanel1" class="col-lg-6">
+            <div class="headerPanel">
+
+                <div class="classTable">
+                    <table class="tableCustomers">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div id="leftPanel2" class="col-lg-6">
+            <div class="headerPanel">
+                <h3>Register Customer</h3>
+                <h5 class="regCustomerText">Customer ID:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Company Name:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Contact Name:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Contact Title:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Adress:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Region:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">City:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Posta Code:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Country:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Phone:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Fax:</h5> <input type="text" class="form-check-input2">
+                <div id="regholder" class="col-lg-6">
+                    <br><button id="buttonRegisterC" class="btn btn-primary center-block">Register</button>
+                </div>
+            </div>
+        </div>
+        <div id="rightPanel2" class="col-lg-6">
+            <div class="headerPanel">
+                <h3>Register Order</h3>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div id="footerBar" class="col-lg-12">
+            <h1>Welcome</h1>
+        </div>
+    </footer>
 
 
     </div>
