--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <div id="leftPanel2" class="col-lg-6">
             <div class="headerPanel">
                 <h3>Register Customer</h3>
-                <h5 class="regCustomerText">Customer ID:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Company Name:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Contact Name:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Contact Title:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Adress:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Region:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">City:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Posta Code:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Country:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Phone:</h5> <input type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Fax:</h5> <input type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Customer ID:</h5> <input id="customerid" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Company Name:</h5> <input id="companyname" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Contact Name:</h5> <input id="contactname" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Contact Title:</h5> <input id="contactitle" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Adress:</h5> <input id="address" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Region:</h5> <input id="region" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">City:</h5> <input id="city" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Posta Code:</h5> <input id="postalcode" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Country:</h5> <input id="country" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Phone:</h5> <input id="phone" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Fax:</h5> <input id="fax" type="text" class="form-check-input2">
                 <div id="regholder" class="col-lg-6">
-                    <br><button id="buttonRegisterC" class="btn btn-primary center-block">Register</button>
+                    <br><button id="buttonRegisterC" class="btn btn-primary center-block" onclick=saveCustomer()>Register</button>
                 </div>
             </div>
         </div>
@@ -86,8 +86,9 @@
     </div>
 </body>
 <script src="script.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
