--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h5 class="regCustomerText">Customer ID:</h5> <input id="customerid" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">Company Name:</h5> <input id="companyname" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">Contact Name:</h5> <input id="contactname" type="text" class="form-check-input2">
-                <h5 class="regCustomerText">Contact Title:</h5> <input id="contactitle" type="text" class="form-check-input2">
+                <h5 class="regCustomerText">Contact Title:</h5> <input id="contacttitle" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">Adress:</h5> <input id="address" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">Region:</h5> <input id="region" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">City:</h5> <input id="city" type="text" class="form-check-input2">
