--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
         <div id="leftPanel1" class="col-lg-6">
-            <div class="headerPanel">
+            <div class="headerPanel2">
 
                 <div class="classTable">
                     <table class="tableCustomers">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div id="rightPanel1" class="col-lg-6">
-            <div class="headerPanel">
+            <div class="headerPanel2">
 
                 <div class="classTable">
                     <table class="tableProducts">
