--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div id="rightPanel2" class="col-lg-6">
             <div class="headerPanel">
                 <h3>Register Order</h3>
+               <!--   Register Order form ska finnas i denna div  -->
             </div>
         </div>
     </div>
