clear box + alert sucess  message

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h5 class="regCustomerText">Phone:</h5> <input id="phone" type="text" class="form-check-input2">
                 <h5 class="regCustomerText">Fax:</h5> <input id="fax" type="text" class="form-check-input2">
                 <div id="regholder" class="col-lg-6">
-                    <br><button id="buttonRegisterC" class="btn btn-primary center-block" onclick=saveCustomer()>Register</button>
+                    <br><button id="buttonRegisterC" class="btn btn-primary center-block" onclick=saveCustomer();clearBoxesC()>Register</button>
                 </div>
             </div>
         </div>
