--- a/index.html
+++ b/index.html
@@ -73,7 +73,20 @@
         <div id="rightPanel2" class="col-lg-6">
             <div class="headerPanel">
                 <h3>Register Order</h3>
-               <!--   Register Order form ska finnas i denna div  -->
+                <!--   Register Order form ska finnas i denna div  -->
+                <h5 class="RegOrder" for="customer">Customers:</h5><select class="RegOrder" id="custom"></select>
+                <h5 class="RegOrder">Shipping Address:</h5> <input id="ShipAddress" type="text" class="form-check-input2">
+                <h5 class="RegOrder">City:</h5> <input id="shipcity" type="text" class="form-check-input2">
+                <h5 class="RegOrder">Postal Code:</h5> <input id="ShipPostalCode" type="text" class="form-check-input2">
+                <h5 class="RegOrder">Order Date</h5> <input id="OrderDate" type="datetime-local">
+                <h5 class="RegOrder">Required Date</h5> <input id="RequiredDate" type="datetime-local">
+                <h5 class="RegOrder">Shipment CO:</h5> <input id="ShipVia" type="text" class="form-check-input2">
+                <h5 class="RegOrder">Order ID:</h5> <input id="Orderid" type="text" class="form-check-input2">
+                <h5 class="RegOrder" for="ProductID">Products:</h5><select class="RegOrder" id="ProductID"></select>
+                <h5 class="RegOrder">Count:</h5> <input id="Quantity" type="text" class="form-check-input2">
+                <h5 class="RegOrder">UnitePrice:</h5> <input id="UnitePrice" type="text" class="form-check-input2">
+                <div id="regholder" class="col-lg-6"></div>
+                    <br><button id="ButtonRegOrder" class="btn btn-primary center-block" onclick=newOrder()>New Order</button>
             </div>
         </div>
     </div>
@@ -86,7 +99,6 @@
 
     </div>
 </body>
-<script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script> -->
@@ -94,5 +106,5 @@
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-
+    <script src="script.js"></script>
 </html>
