--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h5 class="RegOrder">Order ID:</h5> <input id="Orderid" type="text" class="form-check-input2">
                 <h5 class="RegOrder" for="ProductID">Products:</h5><input class="RegOrder" id="ProductID"></input>
                 <h5 class="RegOrder">Quantity:</h5> <input id="Quantity" type="text" class="form-check-input2">
-                <h5 class="RegOrder">UnitePrice:</h5> <input id="UnitePrice" type="text" class="form-check-input2">
+                <h5 class="RegOrder">UnitePrice:</h5> <input id="UnitPrice" type="text" class="form-check-input2">
                 <div id="regholder" class="col-lg-6"></div>
                     <br><button id="ButtonRegOrder" class="btn btn-primary center-block" onclick=newOrder()>New Order</button>
             </div>
