Order details klar

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 <h5 class="RegOrder">UnitePrice:</h5> <input id="UnitPrice" type="text" class="form-check-input2">
                 <div id="regholder" class="col-lg-6"></div>
                     <br><button id="ButtonRegOrder" class="btn btn-primary center-block" onclick=newOrder()>New Order</button>
+                    <br><button id="ButtonRegOrder" class="btn btn-primary center-block" onclick=newOrderDetails()>Add Product</button>
+                    <!-- <br><button id="ButtonRegOrder" class="btn btn-primary center-block" onclick=newOrder()>New Order</button> -->
             </div>
         </div>
     </div>
