--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
                 <div id="regholder" class="col-lg-6">
                     <br><button id="buttonRegisterC" class="btn btn-primary center-block" onclick=saveCustomer();clearBoxesC()>Register</button>
                 </div>
+                <div id="cart">
+                    <dl>
+                        <h1>Cart: </h1>
+                        <dt>Product:</dt>
+                        <dd id="cartProduct"></dd>
+                        <dt>Price:</dt>
+                        <dd id="cartPPrice"></dd>
+                        <dt>Count:</dt>
+                        <dd id="cartPCount"></dd>
+                        <dt>Total:</dt> 
+                        <dd id="cartPTotal"></dd>
+                        
+                      </dl>
+                </div>
             </div>
         </div>
         <div id="rightPanel2" class="col-lg-6">
