--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="headerPanel2">
 
                 <div class="classTable">
-                    <table class="tableCustomers">
+                    <table class="tableCustomers" onclick="flyttaVärde2()">
                         <thead id="cThead"></thead>
                         <tbody id="cBody"></tbody>
                     </table>
@@ -44,7 +44,7 @@
             <div class="headerPanel2">
 
                 <div class="classTable">
-                    <table class="tableProducts">
+                    <table class="tableProducts" onclick="flyttaVärde()">
                         <thead id="pThead"></thead>
                         <tbody id="pBody"></tbody>
                     </table>
